2012-05-25 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix exception when checking status on an evicted client (ticket #126).

2012-05-24 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix path syntax checking in ModelFile (ticket #127).

2012-04-30 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add TextTable class as first step for new outputs (ticket #105).

2012-02-14 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 0.911

2012-02-14 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Model files accept several spaces as separator (ticket #121).

2012-02-13 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Detect and display client connection states (ticket #114).

2012-02-10 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add fsck completion progress tracking and fsck is always run in 
	  -f mode (ticket #107).

2012-02-07 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix incorrect device size when using a symlink (ticket #119).
	* Display action duration in verbose mode (ticket #120).

2012-02-06 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Do not maintain client and target status in backend (ticket #118).

2012-01-26 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* -F failover flag behave correctly when use remotely (ticket #117).

2012-01-19 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Remove last code which raises DeprecationWarning (ticket #22).

2012-01-18 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* More deterministic target order when using backend (ticket #113).

2012-01-17 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Using 'ha_node' in models when using backend is ok (ticket #109).

2012-01-05 Stephane Thiell  <stephane.thiell@cea.fr>
	* Add mount_options per client option (ticket #116).

2011-12-23 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix bad hash method for ModelFile (ticket #112).

2011-12-22 Aurelien Degremont  <aurelien.degremont@cea.fr>