@@ -1,3 +1,6 @@
+2012-06-05 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Fix 'ha_node' handling in storage.conf with backend File (ticket #129).
+
 2012-05-25 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Fix exception when checking status on an evicted client (ticket #126).
 
